Adding new osclass_init.sh in the run.sh script in order to execute into container. This script prepare the database for osclass structure.

--- a/osclass/Dockerfile
+++ b/osclass/Dockerfile
@@ -4,7 +4,7 @@ MANTAINER XaviOutside https://github.com/XaviOutside/MIGRATION_OSCLASS_2_DOCKER
 
 # Install packages
 RUN apt-get update && \
-  apt-get -y install supervisor git apache2 libapache2-mod-php5 php5-mysql pwgen php-apc php5-mcrypt php5-gd php5-curl
+  apt-get -y install supervisor git apache2 libapache2-mod-php5 php5-mysql mysql-client pwgen php-apc php5-mcrypt php5-gd php5-curl
 
 # config to enable .htaccess
 ADD apache_default /etc/apache2/sites-available/000-default.conf
@@ -20,6 +20,7 @@ ENV PHP_UPLOAD_MAX_FILESIZE 10M
 ENV PHP_POST_MAX_SIZE 10M
 
 ADD run.sh /run.sh
+ADD osclass_init.sh /osclass_init.sh
 
 EXPOSE 80 
 CMD ["/run.sh"]
