Disable and extract migration part from the main script to another directory.

--- a/osclass/Dockerfile
+++ b/osclass/Dockerfile
@@ -6,21 +6,16 @@ MAINTAINER XaviOutside https://github.com/XaviOutside/MIGRATION_OSCLASS_2_DOCKER
 RUN apt-get update && \
   apt-get -y install supervisor git apache2 libapache2-mod-php5 php5-mysql mysql-client pwgen php-apc php5-mcrypt php5-gd php5-curl
 
-# config to enable .htaccess
+# Config to enable .htaccess
 ADD apache_default /etc/apache2/sites-available/000-default.conf
 RUN a2enmod rewrite
 RUN a2enmod ssl
 
-# We gonna add the osclass files to the container
-RUN rm -rf /var/www/html && mkdir -p /var/www/html
-COPY backup_osclass.tar.gz /var/www/html/backup_osclass.tar.gz
-COPY backup.mysql.sql /backup.mysql.sql
-RUN cd /var/www/html && tar -xvf backup_osclass.tar.gz && rm -f /var/www/html/backup_osclass.tar.gz
-
-#Enviornment variables to configure php
+# Environment variables to configure php
 ENV PHP_UPLOAD_MAX_FILESIZE 10M
 ENV PHP_POST_MAX_SIZE 10M
 
+# Creating volume for html data
 VOLUME /var/www/html
 
 ADD run.sh /run.sh
