--- a/postfix/Dockerfile
+++ b/postfix/Dockerfile
@@ -1,13 +1,14 @@
-FROM ubuntu:trusty
+FROM alpine
 
 MAINTAINER XaviOutside https://github.com/XaviOutside/MIGRATION_OSCLASS_2_DOCKER
 
 # Install packages
-RUN apt-get update && \
-  apt-get -y install postfix mailutils rsyslog
+RUN apk update && \
+    apk add bash postfix rsyslog
 
 ADD run.sh /run.sh
 
 EXPOSE 25 
 
 CMD ["/run.sh"]
+
