Add mysql conf file to run in a 512 Mb RAM
Signed-off-by: XaviOutside <xavioutside@hotmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ mysql:
     - ./common.env
   expose:
     - "3306"
+  volumes:
+    - "./mysql/conf.d:/etc/mysql/conf.d"
   volumes_from:
     - mysqlvolume
 
